# raspberry-pi-home-automation

./: .gitignore  20h.py  MOTIVATION.md  README.md  alive-script.sh  auto-mute-strava-activities.py  boot-email.sh  build-arduino-sketch-and-deploy.py  config.py  config.txt.default  debug.py  door-sensor.py  door-sensor.service  email-without-attachment.sh  generate-weather-image.py  motion-dist.conf  motion.service  pyproject.toml  report_weather.README.md  report_weather.py  requirements.txt  send-email.sh  setup.py  shutdown.py  shutdown.service  strava-logger.html  turn-led-off.py  turn-led-on.py  turn_led.py  update-should-reboot.py  update-should-send-emails.py  video-to-email.sh  video_recorder.py
.github/: dependabot.yml
.github/workflows/: build-arduino-sketch.yml  python-tests.yml
ArduinoSketch/: ArduinoSketch.ino
docs/: report_weather.README.md
home_automation/: __main__.py  build_arduino_sketch_and_deploy.py  config.py  remote_control.py  report_weather.py  turn_led.py
minidlna/: README.md
services/: door-sensor.service  minidlna.service  motion.service  shutdown.service  video-recorder.service
systemd-services/: door-sensor.service  minidlna.service  notify-email@.service  shutdown.service  video-recorder.service
temperature/: README.md  weatherstation.py
temperature/generate-image/: config.txt.default  weather.py
tests/: test_build_arduino_sketch_and_deploy_pytest.py  test_config_pytest.py  test_main_pytest.py  test_remote_control_pytest.py  test_turn_led_pytest.py  test_video_recorder_pytest.py
