[project]
name = "raspberry-pi-home-automation"
version = "0.1.0"
requires-python = "~=3.9.2"
# Raspbian Bullseye's version of Python

dependencies = [
    "beautifulsoup4==4.14.3",
    # "certifi==2024.2.2",
    # "chardet==3.0.4",
    # "gpiozero==1.6.2", # installed through the APT package `python3-gpiozero`
    # "idna==2.10",
    "pyserial==3.5",
    "pytest==7.4.4",
    "redis==7.0.1",
    "requests==2.34.2",
    "RPi.bme280==0.2.4",
    # "RPi.GPIO==0.7.1", # installed through the APT package `python3-rpi.gpio`, present by default on Raspbian
    "smbus2==0.6.1",
    # "urllib3==1.26.18",
    "yt-dlp==2025.07.21",
]
